--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <div data-cell-index="7" class="cell"></div>
         <div data-cell-index="8" class="cell"></div>
     </section>
-    <script src="dist/script.js" type="module"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
